--- a/style.css
+++ b/style.css
@@ -142,17 +142,26 @@ body {
   padding: 20px 15px;
 }
 
+
+
 .stats__types {
   height: 100%;
   padding: 5px;
 }
 
-.poke-type-one,
-.poke-type-two {
+.stats__weight {
+  display: flex;
+}
+
+.poke-weight, .poke-height {
+  margin-left: 4px;
+}
+
+.poke-type-one {
   background: rgba(255,255,255,.3);
   border-radius: 25px;
   display: block;
-  margin-bottom: 10px;
+  margin-top: 25%;
   padding: 10px;
   text-align: center;
 }
